--- a/Genshin Impact/src/Vista/EleccionPersonajes.form
+++ b/Genshin Impact/src/Vista/EleccionPersonajes.form
@@ -41,6 +41,9 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Sitka Text" size="24" style="1"/>
         </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Elecci&#xf3;n personajes y armas"/>
       </Properties>
       <Constraints>
