--- a/Genshin Impact/src/Vista/ListaPersonajes.form
+++ b/Genshin Impact/src/Vista/ListaPersonajes.form
@@ -32,6 +32,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="JBBarbaraMouseClicked"/>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="JBBarbaraActionPerformed"/>
       </Events>
       <Constraints>
